--- a/water_proofing.html
+++ b/water_proofing.html
@@ -62,7 +62,7 @@
                         <p class="topbar-one__quick_call">
                             <i class="icon-phone-call"></i>
                             <span> Quick Support for call </span>
-                            <a href="tel:+917947149220"> +91 7947149220 </a>
+                            <a href="tel:+919694359661"> +91 9694359661 </a>
                         </p>
                     </div>
 
@@ -75,7 +75,7 @@
                             </li>
                             <li class="topbar-one__info__item">
                                 <i class="icon-chat topbar-one__info__icon"></i>
-                                <a href="mailto:Support@mspaintingwork.com">Support@mspaintingwork.com</a>
+                                <a href="mailto:support@mspaintingwork.com">support@mspaintingwork.com</a>
                             </li>
                         </ul><!-- /.list-unstyled topbar-one__info -->
 
@@ -321,22 +321,26 @@
 
                         <div class="footer-widget__col footer-widget__col--news">
                             <div class="footer-widget__col__content">
-                                <h5 class="footer-widget__col__content__title">Newsletter</h5>
-                                <h6 class="footer-widget__col__content__subtitle">Get the latest news other tips </h6>
+                                <h5>Contact Us</h5>
+                                <ul class="mobile-nav__contact list-unstyled">
+                                    <li>
+                                        <i class="fas fa-phone-alt"></i>
+                                        <a href="tel:+919694359661">+91 9694359661</a>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-phone-alt"></i>
+                                        <a href="tel:+919468889661">+91 9468889661</a>
+                                    </li>
+                                    <li>
+                                        <i class="fas fa-phone-alt"></i>
+                                        <a href="tel:+919571373367">+91 9571373367</a>
+                                    </li>
+                                    <li>
+                                        <i class="icon-chat"></i>
+                                        <a href="mailto:support@wallpi.com">support@mspaintingwork.com</a>
+                                    </li>
+                                </ul>
                             </div><!-- /.footer-widget__col__content -->
-                            <a href="https://forms.gle/VAQtoMsSwjUkxr127">
-                                <form action="#" data-url="MAILCHIMP_FORM_URL"
-                                    class="footer-widget__col__content__newsletter mc-form">
-                                    <div class="footer-widget__col__content__inpfield">
-                                        <input type="email" name="email" placeholder="Email Address">
-                                    </div>
-                                    <button type="submit">Subscribe</button>
-                                </form>
-                            </a><!-- /.footer-widget__newsletter mc-form -->
-                            <div class="mc-form__response"></div><!-- /.mc-form__response -->
-                            <p class="footer-widget__col__subscribe">Subscribe our newsletter to get our latest update
-                                &amp;
-                                news</p>
                         </div><!-- /.col-md-6 -->
                     </div><!-- /.row -->
                 </div><!-- /.container -->
@@ -344,9 +348,7 @@
             <div class="main-footer__bottom">
                 <div class="container">
                     <div class="main-footer__bottom__inner d-flex align-items-center justify-content-between">
-                        <p class="main-footer__copyright"> © <span class="dynamic-year"></span> Wallpi HTML Template All
-                            Rights
-                            Reserved</p>
+                        <p class="main-footer__copyright"> © <span class="dynamic-year"></span> <a href="https://growsoft.in/">GrowSoft</a> All Rights Reserved</p>
                         <div class="main-footer__social">
                             <span class="main-footer__socialtext">Social</span>
                             <a href="https://www.youtube.com/@mspaintingWorks230">
@@ -383,11 +385,19 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fas fa-phone-alt"></i>
-                    <a href="mailto:Support@wallpi.com">Support@gmail.com</a>
+                    <a href="tel:+919694359661">+91 9694359661</a>
+                </li>
+                <li>
+                    <i class="fas fa-phone-alt"></i>
+                    <a href="tel:+919468889661">+91 9468889661</a>
+                </li>
+                <li>
+                    <i class="fas fa-phone-alt"></i>
+                    <a href="tel:+919571373367">+91 9571373367</a>
                 </li>
                 <li>
                     <i class="icon-chat"></i>
-                    <a href="tel:+917947149220">+91 7947149220</a>
+                    <a href="mailto:support@wallpi.com">support@mspaintingwork.com</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__social">
