--- a/index.html
+++ b/index.html
@@ -843,7 +843,7 @@
                             <p class="card-text">"The service provided by this company was exceptional. The team was
                                 punctual and thorough in their work. Highly recommended!"</p>
                             <div class="d-flex align-items-center mt-3">
-                                <img src="https://via.placeholder.com/50" alt="Ananya Patel"
+                                <img src="/assets/images/testimonial/AnanyaPatel.jpg" alt="Ananya Patel"
                                     class="rounded-circle mr-3">
                                 <div>
                                     <h5 class="mb-0">Ananya Patel</h5>
@@ -871,7 +871,7 @@
                             <p class="card-text">"Fantastic experience! The quality of work was top-notch and the
                                 customer service was very responsive."</p>
                             <div class="d-flex align-items-center mt-3">
-                                <img src="https://via.placeholder.com/50" alt="Rajesh Kumar"
+                                <img src="/assets/images/testimonial/RajeshKumar.jpg" alt="Rajesh Kumar"
                                     class="rounded-circle mr-3">
                                 <div>
                                     <h5 class="mb-0">Rajesh Kumar</h5>
@@ -899,7 +899,7 @@
                             <p class="card-text">"Great job! The team was professional, and the work was completed ahead
                                 of schedule. I'm very happy with the results!"</p>
                             <div class="d-flex align-items-center mt-3">
-                                <img src="https://via.placeholder.com/50" alt="Priya Sharma"
+                                <img src="/assets/images/testimonial/PriyaSharma.jpg" alt="Priya Sharma"
                                     class="rounded-circle mr-3">
                                 <div>
                                     <h5 class="mb-0">Priya Sharma</h5>
