--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 	<body class=custom-cursor>
 		<div class=custom-cursor__cursor></div>
 		<div class=custom-cursor__cursor-two></div>
-		<!-- <div class=preloader>
+		<div class=preloader>
 			<div class=preloader__image style=background-image:url(assets/images/loader.webp)></div>
-		</div> -->
+		</div>
 		<div class=page-wrapper>
 			<div class=topbar-one>
 				<div class=container-fluid>
