--- a/index.html
+++ b/index.html
@@ -190,12 +190,12 @@
 					<div class="wow fadeInUp col-lg-6 feature-one__col" data-wow-delay=100ms>
 						<div class=feature-one__item>
 							<div class=feature-one__item__img><img class="lazy-image"
-									data-src="assets/images/resources/feature1-1.webp" alt="painting services"
-									src=assets/images/resources/feature1-1.webp></div>
+									data-src="assets/images/resources/feature1-1.jpg" alt="painting services"
+									src=assets/images/resources/feature1-1.jpg></div>
 							<div class="d-flex flex-wrap feature-one__item__wrap">
 								<div class=feature-one__item__circle_img><img class="lazy-image"
-										data-src="assets/images/resources/feature-circle1-1.webp" alt="painting services"
-										src=assets/images/resources/feature-circle1-1.webp></div>
+										data-src="assets/images/resources/feature-circle1-1.jpg" alt="painting services"
+										src=assets/images/resources/feature-circle1-1.jpg></div>
 								<div class=feature-one__item__info>
 									<h4 class=feature-one__item__info__title>Affordable Excellence</h4>
 									<p class=feature-one__item__info__text>Experience top-quality painting services at
@@ -207,12 +207,12 @@
 					<div class="wow fadeInUp col-lg-6 feature-one__col" data-wow-delay=200ms>
 						<div class=feature-one__item>
 							<div class=feature-one__item__img><img class="lazy-image"
-									data-src="assets/images/resources/feature1-2.webp" alt="customer satisfaction"
-									src=assets/images/resources/feature1-2.webp></div>
+									data-src="assets/images/resources/feature1-2.jpg" alt="customer satisfaction"
+									src=assets/images/resources/feature1-2.jpg></div>
 							<div class="d-flex flex-wrap feature-one__item__wrap">
 								<div class=feature-one__item__circle_img><img class="lazy-image"
-										data-src="assets/images/resources/feature-circle1-2.webp"
-										alt="customer satisfaction" src=assets/images/resources/feature-circle1-2.webp>
+										data-src="assets/images/resources/feature-circle1-2.jpg"
+										alt="customer satisfaction" src=assets/images/resources/feature-circle1-2.jpg>
 								</div>
 								<div class=feature-one__item__info>
 									<h4 class=feature-one__item__info__title>Your Satisfaction, Guaranteed</h4>
@@ -250,12 +250,12 @@
 					<div class=col-lg-6>
 						<div class="wow fadeInLeft about-one__image" data-wow-delay=300ms>
 							<div class=about-one__image__wrap><img class="lazy-image"
-									data-src="assets/images/resources/about1-1.webp" alt="painting services"
-									src=assets/images/resources/about1-1.webp class=about-one__image__wrap__main>
+									data-src="assets/images/resources/about1-1.jpg" alt="painting services"
+									src=assets/images/resources/about1-1.jpg class=about-one__image__wrap__main>
 								<div class=about-one__image__wrap__inner_wrap>
 									<div class=about-one__image__wrap__inner_mx><img class="lazy-image"
-											data-src="assets/images/resources/about1-2.webp" alt="painting services"
-											alt="painting services" src=assets/images/resources/about1-2.webp
+											data-src="assets/images/resources/about1-2.jpg" alt="painting services"
+											alt="painting services" src=assets/images/resources/about1-2.jpg
 											class=about-one__image__wrap__inner_img>
 										<div class=about-one__image__wrap__inner_shape-top></div>
 										<div class=about-one__image__wrap__inner_shape-left></div>
@@ -385,7 +385,7 @@
 			</div>
 		</section>
 		<section class=services-feedback-one>
-			<div class=services-feedback-one__bg style=background-image:url(assets/images/resources/feature1-2.webp)>
+			<div class=services-feedback-one__bg style=background-image:url(assets/images/resources/feature1-2.jpg)>
 			</div>
 			<div class=services-feedback-one__shapeleft
 				style=background-image:url(assets/images/shapes/feedback-shape1-2.webp)></div>
@@ -423,9 +423,9 @@
 					</div>
 					<div class="wow fadeInRight col-lg-5" data-wow-delay=100ms>
 						<div class=services-feedback-one__image><img class="lazy-image"
-								data-src="assets/images/resources/feedback-services1-1.webp"
+								data-src="assets/images/resources/feedback-services1-1.jpg"
 								alt="Exceptional Interior Services"
-								src=assets/images/resources/feedback-services1-1.webp></div>
+								src=assets/images/resources/feedback-services1-1.jpg></div>
 					</div>
 				</div>
 			</div>
@@ -436,8 +436,8 @@
 					<div class="wow fadeInUp col-sm-12" data-wow-delay=100ms>
 						<div class="d-flex align-items-center justify-content-sm-between services-client-one__wrap">
 							<div class=services-client-one__image><img class="lazy-image"
-									data-src="assets/images/resources/feature1-2.webp" alt=""
-									src=assets/images/resources/feature1-2.webp></div>
+									data-src="assets/images/resources/feature1-2.jpg" alt=""
+									src=assets/images/resources/feature1-2.jpg></div>
 							<h4 class=services-client-one__title>We’re Trusted by More then 8800 Clients</h4><a
 								href=index.html#services class="wallpi-btn services-client--btn"><span>Explore
 									more</span></a>
@@ -569,11 +569,11 @@
 									data-src="assets/images/backgrounds/hero-image1-1.webp" alt=wallpi
 									src=assets/images/backgrounds/hero-image1-1.webp></div>
 							<div class=consultation-one__colimg__image__circlemediam><img class="lazy-image"
-									data-src="assets/images/resources/consultation-img1-2.webp" alt=wallpi
-									src=assets/images/resources/consultation-img1-2.webp></div>
+									data-src="assets/images/resources/consultation-img1-2.jpg" alt=wallpi
+									src=assets/images/resources/consultation-img1-2.jpg></div>
 							<div class=consultation-one__colimg__image__circlesmall><img class="lazy-image"
-									data-src="assets/images/resources/consultation-img1-1.webp" alt=wallpi
-									src=assets/images/resources/consultation-img1-1.webp></div>
+									data-src="assets/images/resources/consultation-img1-1.jpg" alt=wallpi
+									src=assets/images/resources/consultation-img1-1.jpg></div>
 						</div>
 					</div>
 					<div class=consultation-one__contentwrap>
