--- a/index.html
+++ b/index.html
@@ -747,6 +747,15 @@
 	<script src="assets/vendors/jquery-lettering/jquery.lettering.min.js"></script>
 	<!-- template js -->
 	<script src="assets/js/wallpi.js"></script>
+	<script async src='https://d2mpatx37cqexb.cloudfront.net/delightchat-whatsapp-widget/embeds/embed.min.js'></script>
+        <script>
+          var wa_btnSetting = {"btnColor":"#16BE45","ctaText":"WhatsApp Us","cornerRadius":40,"marginBottom":20,"marginLeft":20,"marginRight":20,"btnPosition":"left","whatsAppNumber":"919694359661","welcomeMessage":"Hi there 👋 How can I help you?","zIndex":999999,"btnColorScheme":"light"};
+          window.onload = () => {
+            _waEmbed(wa_btnSetting);
+          };
+        </script>
+      
+  
 </body>
 
 
