--- a/index.html
+++ b/index.html
@@ -594,7 +594,7 @@
 									<div class=row>
 										<div class=col-md-6>
 											<div class=consultation-one__contentwrap__content__input-box><input
-													placeholder="Full Name" name=name></div>
+													placeholder="Full Name" name=email type=email></div>
 										</div>
 										<div class=col-md-6>
 											<div class=consultation-one__contentwrap__content__input-box><input
@@ -622,6 +622,73 @@
 				</div>
 			</div>
 		</section>
+
+		<script src="https://cdn.jsdelivr.net/npm/publicalbum@latest/embed-ui.min.js" async></script>
+<div class="pa-carousel-widget" style="width:100%; height:480px; display:none;"
+  data-link="https://photos.app.goo.gl/Af7bV1HpHBh2tvha6"
+  data-title="Ms Painting Works"
+  data-description="59 new items added to shared album"
+  data-delay="2">
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPN7FR21_efzvEPfUcaq70hMhirLkEYDE8b8pTs4rJ-EoIFCbMzOvLFZfhhJmH-h_LGp47Mba4r0iOBvUVqyHA7Tvav4gX_YcRozOHxRoL0sBPX_x8I=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPSXct_nTkuC3tYsplldhqbvVa05tqaARiiHK5CCllK6OqP2Wkf9fBpgz4XwzUsTuWlQIXYhjmi5l6aFhguAgmoveGxxLEAkXUgqcIQLqo39Z2ysH5D=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPU1G1HRuR_jQjTA4L_vZxQavsb5Rkd1lwnwzRRZQOzW6kbyJydLYEFe44OyVkpPAYKfaKSjYeqNg2R7GHkl5ED2lbrLelnF33Y9TMkJGXrkDPNWI3T=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczN14wIUGep9kTUxpyWhjV8d4o76CuM18oS5CmxOIipmg3NkW_SgjOJXcHhzJsv_ajAJ_greSd8RSlaPKm02S-bsxeFq7DO7x4LjPyQaq0BzNwdkuJAN=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNIN3jx4g-Nph0Y9EJrg3al-OB1oBkS60v7agCNCpw8_vmHpi15ZNX7YHuhBuD4xj3oCPflV5thA0pnIwWcNA7fmewLuaVXbP6fk_EKpG-WeSAdK7LE=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOOGC35NxxYh9eJ-UaOTWVIdLoi4wAxJ0hHQ5mVDK1YpRYovMqoPMnKzMzK9t8f1Q3K84ZjVm67orA88nqlhYgbtBEhIYiYwMg9pQ4KzDL1z7Q1Vf3n=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOD0OY0mR2xQCetynD8LVLqWRDe_HNmLnQviOB61NyapTjoefe1kIFabo7zWVXmDEzbGWLUHp7qF-RNdM4kNKQdLTgSYdzRMI30GicEJAtb23WKZDLu=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOQwiqCZkOzbIJz-Bf0o529q6ifE7J_f_aZYu8oq7Q500J-CaHPjZP37MJ_LpBQ84ETmncT_vxly2tE0PfJelrhpN4C9-hcRYkF9MlYmI_9CLxdgw76=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOeLnCfqbit65AUsL5_MRbRSklkVKhsx7iz-81ShxzJbS6Xp9h8mWXbj0CPeaN3BfxwFzAT-Rz8D_16Xo0kXYJWHSaHR1OJCFL39fk03eul25luLpT2=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPm5k8pbqxRJvaacmqtbt6GtpH0qy7KqmBwDcZwymJS4KjGYDFuHor4mgCnrtHw62yQ_B27_bBnPcTR54WlEeoPrAQzlLvT7bP-jxDIVDHNnhIr_6ro=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMb2NY1g5tQH8I3rPPnwt83dgVij3vYOsqUXLipbu_R0SgUfdp-1hufJ_PCOr_LzKTQLr_hUnJLHEjwSh8bKWoZ1xvTJOPyU23UuAoSew-E48I-PiEd=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczObxNi0PdG5mbxGKekPqVVby1ds5fQV6AkftHvB-NQpVk2c_wRmEGslCREV6XeJPykXX_IGiJ-WQszrAQR3IQltGZV84gks4AgzMSSm1LC8fsMoegan=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczO4k9NFoli2ebNZNVSuKZKokX6lvs97OY6s1h5BhgU3zCRhNOawpDSquDcjsq9D_YFOcMjjssAg4ZmNA6y1I0tcMeiHGPMLM7P4yx_Vm_vANknFUOsL=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOHp2wcQMzpTfG-BhTBgixf3QjEbj79_OYNplcgF0jybk6sUrt1Au6hOWPHh-WO_B5_efwwmK2ir-RVnkzkY0VPBv6lfcARvlMfVmC7RYmM3Rb8kn0s=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNVDf-T9fvcjk0_xf9plwBA5s4R_UGg6z1Vs8C8BLSizWqPRFl9Su6xZn_dzFd0BewftIxPN9QsErJ424Gw2iHebLRTHbRTelgvMxUQ4bXMG_nktJFB=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNzsEJvU8Jf9R6xgbpEusrf-DIq_i-VYGUQuf5Pwl9TWE9c2fxP537Y7q_FVtABr1o3-pBevjjdWJYl_jlcnhv9s6FV7w75OhDuYMRBunxR_Lnj75K_=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczP6UJwmtmAAhOHinJQ4I8Tx0u4WAbI9YJGq3wOJT4TMu51wMSnyrq-NdHtz6nvcSBb8MqRt4iUzvOP_CoG2kL5Kw897W_ueB3cQvYh77FeKv5iuHHQA=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOtJBPGrVD8JwemzfwhfXrV5rs3K7MtQ-NtM50Fp_ykDC3WX60mC_x7O9Mt-57rV8k7I5o-mYx2jTXKQSjoMsly3DUQ5xjXn3Iq_W0kkndYVDawOCf4=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNpMWf1n2qdfgpOi9Vgp1EksbWq-TseB38DHFwZ4aSootMFh0OdM0q_Dm7CDaGio32LAJL3wjKaBjlFK8b-ZrA4qqtUfmhfdL30TXM2llpxRsgGIwMF=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczP7J10WbKRfodW-el1cJ6hXg5xpXA0P20LH3_tl8imr9SIjJ8LuOIa91ViZ9_1jCtWw6rp3hMHXrFporom0k7hg3B7UpHKGI1J1UimzUc76wdps4msC=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczO3GKx_PkRVvP66CB09eVWA53qvK3lCr-8y4bCIzfMzdpGCtM63wornIQVRP7SjiUuuAMyPvPbq3s3yayy7B4kheGZ7hOgSk34cFfKKprU1RFOdMy09=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMyIz22imoyLnegV8gBmDXd7hdGKoiPyNTPg2zJM4ym97fPB8RJTfKKLL08j2AlB9Odf5ZWlSSt4xcYo5753khQ9ml5ffA4NC5mWyZCoy7Y5wXWxU-d=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOi7HIIpXWyuTspaIUL-3R-Zx2vRTauUx324Jyibr3dssS6VfmQv3IB2L60jwtEnUQ8oitfw3unFY74SjzF0-YyGTYIvpmoQXp0mWvfdNkcakQT9OWA=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMxLhCb0YhNFZv0hpBzz-zQuNUmqynArqIU52jl-R2lcQxojq9xFixURe54t0HZDcckp_xyki3BEChAoUQ315OPovZr33ng4uPFPm90SKgbUHFgT7fx=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPwSdeDZBdP0fUkIPs62Yj1GIY25rdNH4xCXoNgKEPqGuzV7kf-IitvlEPoURm_GRDj6AXoFUTag77ekY2j0UHElkBri-LE6OTSDJStHQ14q6S2YmGF=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNqeGd8_9medfbhTsRwuVOB9r1w7xiSja-04l5oNKVqKzdb9JiZg1-upqdBShqgOK2oSTJ_dmTiB2F3TGjZipRdDM4PHqok5Ntcr1AgdKWTLtSNzqfl=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczN-x-e94OIbGGFSjIjxmhw0IzRzaYRylGpB1b8I0aViu-FmBPK5mn6OjsmI5ibzM8JJZqnFlaV75d5Crs8dG17FIKbZSqga9KX8MeW0ScFQ6Juz3DS9=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMN1Ed2681ZQaflvslSyqkycENIVknErSyH5bj3z1i2obmeskO8YAOXyO8nGf6u4apH9qouFRNzRtCk77YTNScn2zFWGGRy6NRUtF9Ow28_bbLkIjR8=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPvxav-6qNVojfQbNQRH2E1JTq8t8Ufve2DKZW9NI1tM8rC-4dG3T9uAeayFRcKRx5zhqhC69Bp8DH8fu8ilNHfZX55a5pzYxjtlGcycqPIME86xwdb=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczN854v-1W7DamW_XA73bTiWmGgkhl-VMCAUMYvJjfLZGW_RsI9NH5f_RUSpR8jO97hWmjoD60rJBtrBtOcIWo14hRpko7Yj-SfaRlRIbrKSYUbhRQ-W=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMS3imz6jlE5pzH0XZLJ9BJI0k_oBcTbYKU-YPBxqsOzwtcvQe_jBmuloC2Opy1JK_IE8h45OayDvpQCgNarfrb9ZJAPyyb2QySM2QV_43l1GDXtcSz=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNHEpKisU0uOJUuhIbciqnRAay7Ctgi1cgBqh-wS1mysqyBXzGpKLbhn_xnuNzfBvSgE2tzRqUCZthCxoAUA9_jDrD4pKsyn3iAd_xHMwHNHrmPex4C=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNUEP7ocT4dXPFQqA4FXMMeua8oiL9TJVhPxmlkcFyz57xWg6pXsbA27QOIofgwl03v4eejhz9tIHq3AhHqwZNxu5JoVBhqo2__rleRKYZVkKRe97Dq=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMawtpA8G0tj0vdJe17KWRLt36Fq8Nmvite5hQtbCqjbRcbiINBb-nbmXiUdFntReIBFw2LqqfkJ9KkzPbXBFDllZ_-mQ_BkBu47DhSI2UwIl2lzJGG=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczP_Z49NyJB7UTZe68uiGzQYWgARvCYAP_KGHN6Jk_iJmKAE9psJ5qVx8eMkpIOIy38xAA37bOja2xcjNqap275mW-W0wg--53oAkivR3Cnz4spOVX8t=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPv-kbDaa-r7oEvhcBby6tDglr9huNAmZePBLga34wqDMbc-eLl-ZSE_XoDRNWPBEl23oVOE_6Xb_4mZtKgLo_mVyfuo5I5_G0bqq5BvFdjFUAnNYNl=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczM0yU-w-aKtSrTqZkCOoBY4EokcsS7Vp3EOCtoMZ3IO6aXqJ-2R0yfIGMo89m5aag-RniQcheKon3zgNRCpuAkYJqJ-ZHMNnHko3reO9Rg27XL78ozW=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOeCVL5Jivr91kiq_eViTQagXpPj1voFcPPwP-XHvqRkxUk90Zo8IwkTTSvjL_0Mgb1CsiqyJjTKK3-ir7a9GeD15Te2LPO8k_2O_gWNIURd3qIYpjb=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPM-GAYW_sybE6966rJAHrb7X6usUDIP_czoSWcnk1FfM4bAgnHm_5e9Pdex-uHMEwxjw0_VPG8_pdDSA60b_ZeL5FqCrKZ0nyRrgi1S8Axwjkb8BXc=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOlMJn2vTq3Q-4M3j5eOZ2V7UOcVcuVL-Bs8OPaMB8u3IDUXlGqf5sEo49XDyXuTlgaDYwrjF7MV-y3XoPVcg1YfYXkWZVIKRUGGCwToB3E0MIiBnL1=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczOL6jSOMFaJFGaeBPY7LSIKpx4L_RIrBOBkNd9Uv6TVUEe1ki5CpDJBLlzfh7XP0Q0x2HRZsGF8-pi3s0RNZbvQ2BcbR5B9GICWp6qzPcIJWh5AXBlF=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPsH8rjasPZLrJjFqavNq38OlDJl8ZRboD_B1kaa2BwBeWb_9MlSZjQnq5YHTd-9LLrBZLWtj1Wk-8YCMLiPa-0g78bs8mUQ_bKJNsB-7ZxEKr_ALyO=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPXhNVCM3iFgMlaOFqg3uy42ZiwwSeXQqLKk70cRnsiKCz2oVN1Ljlai00rAGJzgaUctcB-IRdDy9CzhsY9ecwxOES5UTF-VKErfzhSEo94JfY-mvdS=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczM7nixG_bEu2WGchzPGMjrBlX0Xx_aN8PxnjEHRMqg-UPIUuGscYexiA_LIs0hgA3yCH6kXnf5XUwac8SfMFNKRSimIZCcIZt-DZ2AyxHUijx60pj5r=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczO-iynaaugbRFI5BoF6tTXOmLFyqxziXGfneiIQILmDc6VLlrEdWwbDHXIH_vhMcsQPR5BRTZuN6WGIGc2UaUeqYGWmxfPeBXuk_D_58PqnBnUu0olD=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMcahlNeMUEoP2qWzQJUTp1u4ATMgZ2R9Qo7pW1-esgqdNheVWxcufdvzPEdKnaW9dPFPAiSl7KaJkn_JlBegfXl8mUWJuVewxV2d2oKfkCp8kOS0zd=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPNd0NdSHqkjXi6vIqF1-ra5sFTDoOs_DH0cOxRs_i7nol45USnYdOQsLAmQfEhqjdmzEpKUVC_KqfrOI-DOaLvtm_6Hy9idDEwGTVLtCCz-JxQ_8jf=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNAYIxT5ZublTgbY9GcwN4-ujic2K1v-9Wwcm_SREs8ky16i8jss7kGajtDVI9UPzLqJ98UKNpIyZORaODrKQCW6jnAUan0ofSDCIG8g5zyqyiKTx_z=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNOA2llUWF0WE5VXeoaVtbhmFv5NsbPK6xKHUVcDmRYrbb_zb3omxIF1GuTnEnfqqSD6kF5RNuOoPQLW8xaAbld-NsruMi_fAKpNX9MsOWLIdks0VOw=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMNplSpAylfxfZigLkzjwOy3-NbUOWDAeVQAlHCpnmLhy9g3PCa6UaPYKPrespQbZO6FSYJMgJZwkl3rxf1R9zPeMzz7IthUoBwW-fkfKLsalpT1dRi=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPgo5PfxZA7e6yKWN09lYakH_92a8_FYbvrgyyzWnwePgFDjZSBxDBBUNaagVkuaTdvnUYwr78kzsvJcjm7aI1AKLK-pDCYr8kHXur5wD24T8ObjRw_=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczPJWFzC6d9aAGUgBpYVeXs-hKlwFmx0UXp_iXZvl17_2dI79cyxkF0DaV8Ib98FVl0PgZbVb5NTBKGxAjAk5hrzVZsXYowqgEZEB5chJvgBiV9pyN62=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMSxo00BsLkmxba3iVqcES_5XrHkY9vuIoo-qlaHYww6BxpvWGwrA3Uv9Tn0U2DiDxPgPw7p3mF_k2dEjxo39kjdrYWcRWmO3RALHQK6rqB2pLBDEQA=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNA1F02H1iQRzgfZl9MMoUIb0CeZIXjowwNhzIWdre-8U8QkvmxDAz9F4dvgLe_Msj9Ut-7FI_1g0Heagn795Po3wQWKSh7St6K35aHU8Lmgrso-bN-=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMZ6ouQp3EcRQxjB8qrVq1LG2kFjkg0Ol54xIGitTMhn3lfNCHMvhxMt1srMRbOxdJY-2YDGseYztXJjXj5GvuwgKL9-PfY98dZ_AU7E7kNv57Y99bP=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMuE1DxxlkBYxhQng2a9KWcMz3CC6Od3qYRfgIwKWdEWm-hcDoZfLOSbAgt_SJmzwC2Z_WrgMwJSkYUn2UITEAzqKjVCFElSW4YNN01UGGVWPMLcawU=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczMwfNYo3bWIr-mITB-NrQ2-XMhglyFiEMh6Fw4TdtQBMbhInr2N8bQJexzecRn3pJNdrvjmIvYDFjSXDdI0wKcvjHRpCikQH-9-cHesaCjp6_Nia7eb=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczNXavme2ZOqHx2_aoxRbVnsqXh_zAShaIe3Abkjmc0KpOATVkqJEGlCZusxgbBtJjI5YXW9ffPygK2CF0T_j1n8W1cLLqDXbZd2yoqNWY4jVdK9qzV7=w1920-h1080"></object>
+  <object data="https://lh3.googleusercontent.com/pw/AP1GczO-CJzf-UT3gjvdoFLDeobnjtesnLSWQekBojXgXQPwBuBNI7x4Aa3JnkXEHfRwMzjuyRUru-Okydgz-Vne_SORaj_3CAf6bgi2ovDEhTBxdb1okM7_=w1920-h1080"></object>
+</div>
 
 
 		<section class=quick-support>
