--- a/wallpapers/index.html
+++ b/wallpapers/index.html
@@ -131,8 +131,8 @@
 	<li class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-685 current_page_item menu-item-697" role="none"><a href="index.html" aria-current="page" class="ct-menu-link" role="menuitem">Wallpapers</a></li>
 </ul>
 </li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-637" role="none"><a href="https://mspaintingwork.com/index.html#Portfolio" class="ct-menu-link" role="menuitem">Portfolio</a></li>
-<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-621" role="none"><a href="https://mspaintingwork.com/index.html#Testimonial" class="ct-menu-link" role="menuitem">Testimonial</a></li>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-637" role="none"><a href="../index.html#Portfolio" class="ct-menu-link" role="menuitem">Portfolio</a></li>
+<li class="menu-item menu-item-type-custom menu-item-object-custom menu-item-621" role="none"><a href="../index.html#Testimonial" class="ct-menu-link" role="menuitem">Testimonial</a></li>
 <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1222" role="none"><a href="../ms-painting-work-premium-painting-and-waterproofing-services-in-udaipur/index.html" class="ct-menu-link" role="menuitem">About Us</a></li>
 </ul></nav>
 
@@ -242,8 +242,8 @@
 	<li id="menu-item-697" class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-685 current_page_item menu-item-697" role="none"><a href="index.html" aria-current="page" class="ct-menu-link" role="menuitem">Wallpapers</a></li>
 </ul>
 </li>
-<li id="menu-item-637" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-637" role="none"><a href="https://mspaintingwork.com/index.html#Portfolio" class="ct-menu-link" role="menuitem">Portfolio</a></li>
-<li id="menu-item-621" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-621" role="none"><a href="https://mspaintingwork.com/index.html#Testimonial" class="ct-menu-link" role="menuitem">Testimonial</a></li>
+<li id="menu-item-637" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-637" role="none"><a href="../index.html#Portfolio" class="ct-menu-link" role="menuitem">Portfolio</a></li>
+<li id="menu-item-621" class="menu-item menu-item-type-custom menu-item-object-custom menu-item-621" role="none"><a href="../index.html#Testimonial" class="ct-menu-link" role="menuitem">Testimonial</a></li>
 <li id="menu-item-1222" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1222" role="none"><a href="../ms-painting-work-premium-painting-and-waterproofing-services-in-udaipur/index.html" class="ct-menu-link" role="menuitem">About Us</a></li>
 </ul></nav>
 
