--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,7 +8,7 @@
 <channel>
 	<title>
 	Comments for MS Painting Works: Your Trusted Painting Partner in Udaipur	</title>
-	<atom:link href="https://darkred-spider-180929.hostingersite.com/comments/feed/" rel="self" type="application/rss+xml" />
+	<atom:link href="https://mspaintingwork.com/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>https://mspaintingwork.com/</link>
 	<description></description>
 	<lastBuildDate>Wed, 02 Oct 2024 12:00:23 +0000</lastBuildDate>
